[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingface-org-stats"
version = "1.0.0"
description = "A professional command-line tool to collect comprehensive statistics for Hugging Face organizations"
readme = "README.md"
license = {text = "CC BY 4.0"}
authors = [
    {name = "Julien Simon", email = "julien@julien.org"}
]
keywords = ["huggingface", "statistics", "api", "data-collection", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.7"
dependencies = [
    "huggingface-hub>=0.16.0",
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.62.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
    "isort>=5.0.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.4.0",
    "types-requests",
    "types-tqdm",
    "pandas-stubs",
]

[project.scripts]
hf-org-stats = "hf_org_stats:main"

[project.urls]
Homepage = "https://github.com/yourusername/huggingface-org-stats"
Repository = "https://github.com/yourusername/huggingface-org-stats"
Documentation = "https://github.com/yourusername/huggingface-org-stats#readme"
Issues = "https://github.com/yourusername/huggingface-org-stats/issues"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
exclude = "/site-packages/"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=hf_org_stats",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
